# stocks

./: .gitignore  .gitmodules  Cargo.toml  README.md  Trunk.toml  export-to-csv.py  index-a0fda4ac9b0ca084.js  index-a0fda4ac9b0ca084_bg.wasm  index.html  tailwind-39b2c860396f8b4.css
src/: csv_parser.rs  main.rs  option_tax.rs  tax.rs
